--- a/index.html
+++ b/index.html
@@ -27,7 +27,28 @@
           </svg>
           <span id="create-note-text">Neue Notiz erstellen</span>
         </button>
-        <div class="note"></div>
+        <div class="note-list">
+          <div class="single-note">
+            <div class="note">
+              <h4 class="title">Note 1</h4>
+              <span class="text"
+                >bla bla bla bla bla bla bla bla bla bla bla b</span
+              >
+            </div>
+            <div class="time-stamp">
+              <span class="time">2024-01-01 / 20:08</span>
+            </div>
+          </div>
+          <div class="single-note">
+            <div class="note">
+              <h4 class="title">Note 1</h4>
+              <span class="text">bla bla bla bla aaaaaaaaaaaaaaaaaa</span>
+            </div>
+            <div class="time-stamp">
+              <span class="time">2024-01-01 / 20:08</span>
+            </div>
+          </div>
+        </div>
       </div>
       <div class="new-note-contaienr">
         <input
